$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- remove domain name handling from dhclient-script; it's not used and looks suspicious in light of CVE-2011-0997
- fix GEOM patch (again)
- update rc.firmware and php.ini for larger firmware image
- fix setkey location for racoon
- fix wan page javascript
 
- remove lan ipv6 suggest from UI.
- remove wan ipv6 RA from UI.
- add accept_rtadv flags to interfaces for dhcp or ppp on WAN for ipv6 , and disable for opt and lan.
- change ipv6 RA UI to dropdown (if previous config had both set, display as 'Managed').
- change password fields in wan to type=password html tag.
- add system date to status page,add info for via padlock, cpu info , cpu utilisation and change bar graph style
- move cpu graph to diagnostics
- add dhcp-pd to optional interfaces
- move enable ipv6 from advanced (no support) to setup page

- update GEOM patch to hide more errors about slice types etc.
- fix rtadvd.conf to use prefix length instead of rtplen

- add kernel patch to hide GEOM error about slice 
- remove wget's as this is in svn.m0n0.ch now, so no need when we have a svn co in the script
- add autodetect lan interface when using a default config (first if that is UP)

1.8.b00
-----
- branch of freebsd6 to freebsd8
  freebsd6 is now frozen except for major fixes

- newbuild scripts within build directory patches to freebsd 8.1 and creates working iso
  based on same filesytem type as freebsd6 / 1.33


1.33
-----
- Add MTU option for ipv6 RA 
  ipv6 RA uses configured subnet length instead of default /64
  
- Fix DHCPv6 server filter problem for opt interface if dhcpdv4 is not enabled

- modify "disable port mapping" option so that it will actually avoid port
  mapping whenever possible, but fall back to port mapping if another mapping
  for the same port already exists
  (inspired by a patch submitted by Adam Swift)


1.33b2
------
